Version 1.1.0-CVS (?? ??? 2006)
 - Fixed bug 1493472: entered 'task' will not be displayed on day.php
 - Fixed bug 1495426: grid incomplete at preview of colors
 = Fixed bug 1457983: Assistants don't delete events for everyone
 - Fixed bug 1487016: Events not listing in time order
 - Changed functions to return strings vs echoing data...precursor to templating
 - Fixed bug 1492216: Firefox 'Live Bookmark' shows '(Empty)'
 - Fixed bug 1492208: Entries not displayed on last day of week in 'Week' view
 - Fixed bug 1493481: 'small task list' is on the bottom of the month.php
 - Fixed bug 1491490: cal_url is too short
 - Fixed bug 1492792: Month-, Week- and Year-selection at trailer are missing
 - Fixed bug 1493405: [_public_] won't be displayed in the proper language
 - Fixed bug 1493446: 'Edit' - button not displayed in the proper language
 - Fixed bug 1486953: 'Unapproved Entries' list shows every NUC
 - Fixed bug 1492771: rejection of 'Themes' AND 'Menu themes' don't work
 - Fixed bug 1492753: missing 'convert to GMT' at wizard 'step 4
 - Fixed bug 1491491: reload_remotes.php doesn't display any error message
 - Implemented RFE 1490058: export a certain category
 - Fixed bug 1489354: installation wizard doesn't work after 'step3'
 - Fixed bug 1490179: Error after upgrading to latest CVS 1.1
 - Fixed bug 1491406: using 'Not yet registered? Register here!' cause an error
 - Fixed bug 1490944: 1.1.0 works only with firefox
 - Fixed bug 1490979: descriptions of preferences will not be <bold>
 - Fixed bug 1490969: option 'Display tasks in Calendars:' enabled will not work
 - Fixed bug 1490749: reminder-entry in pop-up couldn't be translated
 - Fixed bug 1490046: Time zone problems
 - Fixed bug 1474991: Can't see all participants in availability window
 - Fixed bug 1476022: Availability Status
 - Fixed bug 1434994: minitask leaks details on other user's private tasks
 - Fixed bug 1489393: "Add Entry" defaults to first work hour