@@ -80,5 +80,17 @@ $datestyles_md = array (
  '__dd__/__mm__', '31/12',
  '__dd__-__mm__', '31-12',
  '__dd__.__mm__', '31.12'
+); 
+//Task Date format
+$datestyles_task = array (
+ 'LANGUAGE_DEFINED', translate( 'LANGUAGE DEFINED' ),    
+ '__mm__/__dd__/__yyyy__', '12/31/2000',
+ '__mm__/__dd__/__yy__', '12/31/00',
+ '__mon__ __dd__', translate( 'Dec' ) . ' 31',
+ '__mm__/__dd__', '12/31',
+ '__mm__-__dd__', '12-31',
+ '__dd__/__mm__', '31/12',
+ '__dd__-__mm__', '31-12',
+ '__dd__.__mm__', '31.12'
 );   
 ?>
