@@ -32,6 +32,7 @@ $webcalConfig = array (
 'CUSTOM_TRAILER'=>'N',
 'DATE_FORMAT_MD'=>'LANGUAGE_DEFINED',
 'DATE_FORMAT_MY'=>'LANGUAGE_DEFINED',
+'DATE_FORMAT_TASK'=>'LANGUAGE_DEFINED',
 'DATE_FORMAT'=>'LANGUAGE_DEFINED',
 'DEMO_MODE'=>'N',
 'DISABLE_ACCESS_FIELD'=>'N',
@@ -47,6 +48,7 @@ $webcalConfig = array (
 'DISPLAY_DESC_PRINT_DAY'=>'Y',
 'DISPLAY_MOON_PHASES'=>'N',
 'DISPLAY_LOCATION'=>'N',
+'DISPLAY_MINUTES'=>'N',
 'DISPLAY_SM_MONTH'=>'Y',
 'DISPLAY_TASKS'=>'N',
 'DISPLAY_TASKS_IN_GRID'=>'N',
